--- a/build.common.gradle
+++ b/build.common.gradle
@@ -106,4 +106,4 @@ repositories {
         dirs rootProject.file('libs')
     }
 }
-apply from: 'build.release.gradle'
+apply from: '../TeamCode/build.release.gradle'
