--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@
  */
 buildscript {
     ext.kotlin_version = '1.3.11'
+    ext.dokka_version = '0.9.17'
     repositories {
         google()
         jcenter()
@@ -12,6 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
     }
 }
 
